[gd_scene load_steps=4 format=4 uid="uid://bsv552n8hs4u7"]

[ext_resource type="TileSet" uid="uid://c1ooy34k6d8fr" path="res://Tiles/TileSet.tres" id="1_aaj1h"]
[ext_resource type="Script" uid="uid://7al43isil6ku" path="res://Scripts/MapGeneration.gd" id="1_j43a2"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1pnbj"]
noise_type = 0
seed = 510
frequency = 0.04
fractal_type = 0
fractal_octaves = 10
fractal_lacunarity = 0.0
fractal_gain = 10.0
fractal_weighted_strength = 0.25
domain_warp_type = 2
domain_warp_amplitude = 1.123
domain_warp_frequency = 234.0
domain_warp_fractal_type = 2
domain_warp_fractal_octaves = 10
domain_warp_fractal_gain = 12312.0

[node name="MapGeneration" type="Node2D"]
script = ExtResource("1_j43a2")
map = SubResource("FastNoiseLite_1pnbj")

[node name="WaterLayer1" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(0, 12)
tile_map_data = PackedByteArray("AAD8//7/AAAAAAAAAAD9////AAAAAAAAAAD8////AAAAAAAAAAD7////AAAEAAAAAAD7//7/AAAEAAAAAAD7//3/AAACAAEAAAD8//3/AAADAAAAAAD9//3/AAADAAAAAAD9//7/AAAAAAAAAAD9/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD7/wAAAAAEAAAAAAD+/wAAAAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+//3/AAADAAAAAAD/////AAADAAEAAAD///3/AAABAAAAAAD///7/AAADAAEAAAD//wAAAAADAAEAAAD//wEAAAACAAAAAAD+/wEAAAAEAAEAAAD9/wEAAAAEAAEAAAD8/wEAAAAEAAEAAAD7/wEAAAABAAEAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="WaterLayer2" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD8//7/AQAAAAAAAAD9////AQAAAAEAAAD8////AQAAAAAAAAD7////AQAEAAAAAAD7//7/AQAEAAAAAAD7//3/AQACAAEAAAD8//3/AQADAAAAAAD9//3/AQADAAAAAAD9//7/AQAAAAAAAAD+////AQAAAAAAAAD+//3/AQADAAAAAAD+//7/AQAAAAAAAAD/////AQADAAEAAAD///3/AQABAAAAAAD///7/AQADAAEAAAD//wAAAQADAAEAAAD+/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD//wEAAQACAAAAAAD+/wEAAQAEAAEAAAD9/wEAAQAEAAEAAAD8/wEAAQAEAAEAAAD8/wAAAQAAAAAAAAD7/wEAAQABAAEAAAD7/wAAAQAEAAAAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="Height0" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD9////AgAAAAAAAAD+/wAAAgACAAAAAAD9/wAAAgAEAAEAAAD8/wAAAgAEAAEAAAD8////AgAAAAAAAAD8//7/AgADAAAAAAD9//7/AgADAAAAAAD+//7/AgABAAAAAAD+////AgADAAEAAAD7/wAAAgABAAEAAAD7////AgAEAAAAAAD7//7/AgACAAEAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="Height1" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(0, -12)
tile_map_data = PackedByteArray("AAD9////CQAAAAAAAAD+/wAACQACAAAAAAD9/wAACQAEAAEAAAD8/wAACQAEAAEAAAD8////CQAAAAAAAAD8//7/CQADAAAAAAD9//7/CQADAAAAAAD+//7/CQABAAAAAAD+////CQADAAEAAAD7/wAACQABAAEAAAD7////CQAEAAAAAAD7//7/CQACAAEAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="Height2" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(0, -24)
tile_map_data = PackedByteArray("AAD9////CQAAAAAAAAD+/wAACQACAAAAAAD9/wAACQAEAAEAAAD8/wAACQAEAAEAAAD8////CQAAAAAAAAD8//7/CQADAAAAAAD9//7/CQADAAAAAAD+//7/CQABAAAAAAD+////CQADAAEAAAD7/wAACQABAAEAAAD7////CQAEAAAAAAD7//7/CQACAAEAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="Height3" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(0, -36)
tile_map_data = PackedByteArray("AAD9////CQAAAAAAAAD+/wAACQACAAAAAAD9/wAACQAEAAEAAAD8/wAACQABAAEAAAD8////CQAEAAAAAAD8//7/CQACAAEAAAD9//7/CQADAAAAAAD+//7/CQABAAAAAAD+////CQADAAEAAAA=")
tile_set = ExtResource("1_aaj1h")

[node name="Height4" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(0, -48)
tile_map_data = PackedByteArray("AAD9////AwAAAAAAAAD+/wAAAwACAAAAAAD9/wAAAwAEAAEAAAD8/wAAAwABAAEAAAD8////AwAEAAAAAAD8//7/AwACAAEAAAD9//7/AwADAAAAAAD+//7/AwABAAAAAAD+////AwADAAEAAAA=")
tile_set = ExtResource("1_aaj1h")
